--- a/locales/ar.json
+++ b/locales/ar.json
@@ -1,4 +1,7 @@
 {
+	"Nav": [
+		{ "name": "مدونة", "url": "" }
+	],
 	"SEO":{
 		"title": "حاسبة أرباح تيك توك - مجانًا وبدون تسجيل دخول",
 		"keywords": "حاسبة أرباح تيك توك, حاسبة أرباح تيك توك, حساب الأرباح على تيك توك, كيفية حساب الأرباح على تيك توك",
@@ -14,5 +17,82 @@
 	},
 	"Faq": {
 	  "h3": "الأسئلة الشائعة حول آلة حاسبة لأرباح تيك توك"
-	}
+	},
+	"Footer": [
+		{ "name": "About Us", "url": "/about" },
+		{ "name": "Advertising Terms", "url": "/ads" },
+		{ "name": "Privacy Policy", "url": "/privacy" }
+	],
+	"Content_List": [
+		{
+		  "title": "ما هو حاسبة أموال TikTok؟",
+		  "name": "حاسبة أموال TikTok، والمعروفة أيضًا بحاسبة عملات TikTok، هي أداة تقدّر عدد عملات TikTok التي تحتاج لشرائها للهدايا الافتراضية أو قيمة الهدايا التي ربحتها. لاستخدامها، أدخل قيمة العملات أو الهدية المحددة التي تهمك. يقوم الحاسبة بتحويل هذه العملات إلى قيمتها المكافئة بالدولار، مما يساعدك على فهم تكلفة أو الأرباح المحتملة من الهدايا الافتراضية. هذه الأداة مفيدة للمستخدمين الذين يرغبون في إدارة نفقاتهم على المنصة أو للمبدعين الذين يتطلعون لتقدير دخلهم من الهدايا المستلمة."
+		},
+		{
+		  "title": "كيف تسحب الأموال من حاسبة TikTok؟",
+		  "name": "سحب الأموال من حاسبة TikTok يتطلب بضع خطوات بسيطة. أولاً، تأكد من ربط حساب TikTok الخاص بك بحساب PayPal أو حساب بنكي معتمد. بعد ذلك، قم بالوصول إلى قسم صندوق منشئي TikTok أو قسم أرباح حاسبة TikTok داخل التطبيق. اختر خيار 'سحب'، أدخل المبلغ المطلوب، ووافق على تفاصيل السحب. أخيرًا، تحقق من المعاملة، وستُحول أرباحك إلى حسابك المرتبط في غضون بضعة أيام عمل. تذكر التحقق من أي رسوم تطبيق أو حدود السحب الدنيا التي تحددها TikTok."
+		},
+		{
+		  "title": "كيف تستخدم حاسبة أموال TikTok؟",
+		  "name": "تساعد حاسبة أموال TikTok المؤثرين في تقدير الأرباح المحتملة من محتواهم. لاستخدامها، أدخل اسم مستخدم TikTok الخاص بك أو عدد المتابعين، ومتوسط المشاهدات لكل فيديو، ومعدل التفاعل. ستوفر الحاسبة نطاق تقدير للأرباح استنادًا إلى أداء ملفك الشخصي. هذه الأداة مفيدة للمبدعين والعلامات التجارية لتقييم قيمة حسابات TikTok، وتخطيط استراتيجيات التربح، وتحديد الأهداف المالية الواقعية. لاحظ أن الأرباح الفعلية قد تختلف بناءً على عوامل مثل المجال، الموقع، وبيانات الجمهور."
+		},
+		{
+		  "title": "هل يمكن استخدام حاسبة أموال TikTok في عام 2024؟",
+		  "name": "نعم، تظل حاسبة أموال TikTok أداة قيمة للمبدعين في عام 2024، حيث تتيح لهم تقدير الأرباح المحتملة بناءً على عدد المتابعين، معدل التفاعل، ومتوسط مشاهدات الفيديو. تساعد هذه الأداة المؤثرين والعلامات التجارية في تقييم القيمة المالية لحساب TikTok. بينما تقدم الحاسبة تقديرًا مفيدًا، يمكن أن تختلف الأرباح الفعلية بناءً على عوامل مثل المجال، موقع الجمهور، وشراكات العلامات التجارية. في عام 2024، تظل الحاسبة ذات صلة لأولئك الذين يسعون لتحقيق دخل من وجودهم على TikTok وتحديد توقعات مالية واقعية."
+		},
+		{
+		  "title": "هل هناك أي حاسبة أموال TikTok أخرى موصى بها؟",
+		  "name": "حاسبة أموال TikTok من Exolyt هي أداة شائعة تتيح لمؤثري TikTok تقدير أرباحهم المحتملة من المنصة. من خلال إدخال اسم مستخدم TikTok الخاص بك أو مقاييس مثل عدد المتابعين، معدل التفاعل، ومشاهدات الفيديو، توفر الحاسبة نطاقًا تقديريًا للأرباح. تعتبر أداة Exolyt مفيدة بشكل خاص للمؤثرين والعلامات التجارية لتقييم قيمة حسابات TikTok، وتخطيط استراتيجيات التربح، وتتبع الأداء. بينما تكون التقديرات مفيدة، يمكن أن تختلف الأرباح الفعلية بناءً على المجال، بيانات الجمهور، وفرص الشراكة."
+		}
+	],
+	"FAQ_List": [
+		{
+			"question": "ما هو آلة حاسبة أرباح تيك توك؟",
+			"answer": "آلة حاسبة أرباح تيك توك هي أداة تقدر كم من المال يمكنك كسبه من حسابك على تيك توك بناءً على عدد المتابعين، معدل التفاعل، وأداء المحتوى الخاص بك."
+		},
+		{
+			"question": "ما مدى دقة تقديرات الأرباح؟",
+			"answer": "بينما توفر الآلة الحاسبة تقديراً جيداً بناءً على متوسطات الصناعة، قد تختلف الأرباح الفعلية حسب عوامل مثل الصفقات التجارية، التخصص، وجودة المحتوى."
+		},
+		{
+			"question": "ما البيانات التي أحتاج إلى إدخالها للتقدير؟",
+			"answer": "ستحتاج إلى تقديم عدد متابعينك، ومتوسط الإعجابات، والمشاركات، والتعليقات، والمشاهدات لكل فيديو للحصول على تقدير دقيق."
+		},
+		{
+			"question": "هل تتصل الآلة الحاسبة بحسابي على تيك توك؟",
+			"answer": "لا، آلة حاسبة أرباح تيك توك لا تتصل مباشرة بحسابك. تحتاج إلى إدخال بياناتك يدويًا لتوليد التقديرات."
+		},
+		{
+			"question": "هل يمكن للآلة الحاسبة توقع الأرباح المستقبلية؟",
+			"answer": "نعم، يمكن للآلة الحاسبة توقع الأرباح المستقبلية بناءً على معدل نموك الحالي ومقاييس التفاعل، مما يساعدك على تخطيط استراتيجيتك المالية."
+		},
+		{
+			"question": "هل آلة حاسبة أرباح تيك توك مجانية للاستخدام؟",
+			"answer": "نعم، معظم آلات حاسبة أرباح تيك توك مجانية للاستخدام ولا تتطلب أي دفع للوصول إلى الميزات الأساسية."
+		},
+		{
+			"question": "كيف يتم حساب معدل التفاعل؟",
+			"answer": "يتم حساب معدل التفاعل عن طريق تقسيم إجمالي عدد التفاعلات (الإعجابات، التعليقات، المشاركات) على إجمالي عدد المتابعين، ثم ضرب الناتج في 100 للحصول على النسبة المئوية."
+		},
+		{
+			"question": "هل يمكنني مقارنة أرباحي مع مؤثرين آخرين؟",
+			"answer": "نعم، تقدم بعض آلات حاسبة أرباح تيك توك أدوات مقارنة تتيح لك رؤية كيف تتراكم أرباحك مقارنةً بمؤثرين آخرين لديهم عدد متابعين ومعدلات تفاعل مماثلة."
+		},
+		{
+			"question": "هل تأخذ الآلة الحاسبة في الاعتبار التخصصات المختلفة؟",
+			"answer": "بعض الآلات الحاسبة المتقدمة تتيح لك تحديد تخصصك، مما يمكن أن يؤثر على تقدير الأرباح حيث أن التخصصات المختلفة لها قيم سوقية متنوعة."
+		},
+		{
+			"question": "هل يمكن للعلامات التجارية استخدام الآلة الحاسبة للعثور على مؤثرين؟",
+			"answer": "بينما الآلة الحاسبة مخصصة بشكل أساسي للمؤثرين، يمكن للعلامات التجارية استخدامها لتقدير قيمة التعاونات المحتملة مع منشئي المحتوى على تيك توك."
+		},
+		{
+			"question": "كم مرة يجب عليّ تحديث بياناتي في الآلة الحاسبة؟",
+			"answer": "من المستحسن تحديث بياناتك بانتظام، خاصة بعد نشر محتوى جديد، للحصول على أدق تقديرات للأرباح."
+		},
+		{
+			"question": "ما هي قيود آلة حاسبة أرباح تيك توك؟",
+			"answer": "تقدم الآلة الحاسبة تقديرات بناءً على البيانات المتاحة واتجاهات الصناعة. ومع ذلك، فهي لا تستطيع حساب الصفقات الفريدة، وتفضيلات العلامات التجارية، أو التغيرات المفاجئة في خوارزميات المنصة."
+		}
+	]
 }  
