--- a/locales/en.json
+++ b/locales/en.json
@@ -1,4 +1,10 @@
 {
+	"Nav":[
+		{
+			"name":"blog",
+			"url":""
+		}
+	],
 	"SEO":{
 		"title": "TikTok Money Calculator——Free & No Login Required", 
 		"keywords": "TikTok Money Calculator, TikTok earnings calculator, calculate TikTok income, how to calculate money on TikTok",
@@ -12,7 +18,84 @@
 		"des2": "Real-time Data",
 		"des3": "Calculation accuracy"
 	},
+	"Content_List": [
+		{
+		  "title": "What is TikTok money calculator means?",
+		  "name": "The TikTok money calculator also named TikTok coin calculator, it is a tool that estimates how many TikTok coins you need to purchase for virtual gifts or how much your earned gifts are worth. To use it, enter the value of coins or the specific gift you’re interested in. The calculator converts these coins into their equivalent value in dollars, helping you understand the cost or potential earnings from virtual gifts. This is helpful for users who want to manage their spending on the platform or for creators looking to estimate their income from received gifts."
+		},
+		{
+		  "title": "How to withdraw TikTok money calculator?",
+		  "name": "Withdrawing money from the TikTok calculator involves a few straightforward steps. First, ensure your TikTok account is linked to a verified PayPal or bank account. Next, access the TikTok Creator Fund or TikTok calculator earnings section within the app. Select the 'Withdraw' option, input the desired amount, and confirm the withdrawal details. Finally, verify the transaction, and your earnings will be transferred to your linked account within a few business days. Remember to check for any applicable fees or minimum withdrawal amounts set by TikTok."
+		},
+		{
+		  "title": "How to use the TikTok money calculator?",
+		  "name": "The TikTok money calculator helps influencers estimate potential earnings from their content. To use it, simply enter your TikTok username or follower count, average views per video, and engagement rate. The calculator will then provide an estimated earnings range based on your profile's performance. This tool is useful for creators and brands to gauge the value of TikTok accounts, plan monetization strategies, and set realistic financial goals. Note that actual earnings may vary based on factors like niche, location, and audience demographics."
+		},
+		{
+		  "title": "Is the TikTok money calculator can be used in 2024?",
+		  "name": "Yes,The TikTok money calculator remains a valuable tool for creators in 2024, allowing them to estimate potential earnings based on their follower count, engagement rate, and average video views. It helps influencers and brands gauge the financial value of a TikTok account. While the calculator provides a useful estimate, actual earnings can vary depending on factors like niche, audience location, and brand partnerships. In 2024, the calculator continues to be relevant for those looking to monetize their TikTok presence and set realistic financial expectations."
+		},
+		{
+		  "title": "Any other TikTok money calculator recommend?",
+		  "name": "Exolyt TikTok Money Calculator is a popular tool that allows TikTok influencers to estimate their potential earnings from the platform. By inputting your TikTok username or metrics like follower count, engagement rate, and video views, the calculator provides an estimated earnings range. Exolyt's tool is especially useful for influencers and brands to assess the value of TikTok accounts, plan monetization strategies, and track performance. While the estimates are insightful, actual earnings may vary based on niche, audience demographics, and partnership opportunities."
+		}
+	],
 	"Faq": {
 		"h3": "FAQ of TikTok Money Calculator"
-	}
+	},
+	"FAQ_List": [
+		{
+		  "question": "What is the TikTok Money Calculator?",
+		  "answer": "The TikTok Money Calculator is a tool that estimates how much money you can earn from your TikTok account based on your followers, engagement rate, and content performance."
+		},
+		{
+		  "question": "How accurate are the earnings estimates?",
+		  "answer": "While the calculator provides a good estimate based on industry averages, actual earnings may vary depending on factors like brand deals, niche, and content quality."
+		},
+		{
+		  "question": "What data do I need to input for the calculation?",
+		  "answer": "You’ll need to provide your follower count, average likes, shares, comments, and views per video to get an accurate estimate."
+		},
+		{
+		  "question": "Does the calculator connect to my TikTok account?",
+		  "answer": "No, the TikTok Money Calculator does not connect directly to your account. It requires you to manually input your data to generate the estimates."
+		},
+		{
+		  "question": "Can the calculator predict future earnings?",
+		  "answer": "Yes, the calculator can project future earnings based on your current growth rate and engagement metrics, helping you plan your financial strategy."
+		},
+		{
+		  "question": "Is the TikTok Money Calculator free to use?",
+		  "answer": "Yes, most TikTok Money Calculators are free to use and don’t require any payment to access the basic features."
+		},
+		{
+		  "question": "How is the engagement rate calculated?",
+		  "answer": "Engagement rate is calculated by dividing the total number of interactions (likes, comments, shares) by your total follower count, then multiplying by 100 to get a percentage."
+		},
+		{
+		  "question": "Can I compare my earnings with other influencers?",
+		  "answer": "Yes, some TikTok Money Calculators offer comparison tools that allow you to see how your earnings stack up against other influencers with similar follower counts and engagement rates."
+		},
+		{
+		  "question": "Does the calculator account for different niches?",
+		  "answer": "Some advanced calculators allow you to specify your niche, which can impact the earnings estimate as different niches have varying market values."
+		},
+		{
+		  "question": "Can brands use the calculator to find influencers?",
+		  "answer": "While the calculator is primarily for influencers, brands can use it to estimate the value of potential collaborations with TikTok creators."
+		},
+		{
+		  "question": "How often should I update my data in the calculator?",
+		  "answer": "It’s recommended to update your data regularly, especially after posting new content, to get the most accurate earnings estimates."
+		},
+		{
+		  "question": "What are the limitations of the TikTok Money Calculator?",
+		  "answer": "The calculator provides estimates based on available data and industry trends. However, it cannot account for unique deals, brand preferences, or sudden changes in the platform’s algorithms."
+		}
+	  ],
+	  "Footer": [
+		{ "name": "About Us", "url": "" },
+		{ "name": "Advertising Terms", "url": "" },
+		{ "name": "Privacy Policy", "url": "" }
+	  ]
 }
