--- a/locales/es.json
+++ b/locales/es.json
@@ -1,4 +1,7 @@
 {
+	"Nav": [
+		{ "name": "Blog", "url": "" }
+	],
 	"SEO":{
 		"title": "Calculadora de Dinero de TikTok - Gratis y Sin Necesidad de Iniciar Sesión",
 		"keywords": "Calculadora de Dinero de TikTok, Calculadora de ganancias de TikTok, calcular ingresos en TikTok, cómo calcular dinero en TikTok",
@@ -14,5 +17,82 @@
 	},
 	"Faq": {
 	  "h3": "Preguntas Frecuentes sobre el Calculador de Ingresos TikTok"
-	}
+	},
+	"Footer": [
+		{ "name": "About Us", "url": "/about" },
+		{ "name": "Advertising Terms", "url": "/ads" },
+		{ "name": "Privacy Policy", "url": "/privacy" }
+	],
+	"FAQ_List": [
+		{
+			"question": "¿Qué es el Calculador de Dinero de TikTok?",
+			"answer": "El Calculador de Dinero de TikTok es una herramienta que estima cuánto dinero puedes ganar con tu cuenta de TikTok basándose en tus seguidores, tasa de participación y rendimiento del contenido."
+		},
+		{
+			"question": "¿Qué tan precisas son las estimaciones de ingresos?",
+			"answer": "Aunque el calculador proporciona una buena estimación basada en promedios de la industria, los ingresos reales pueden variar dependiendo de factores como acuerdos de marca, nicho y calidad del contenido."
+		},
+		{
+			"question": "¿Qué datos necesito ingresar para el cálculo?",
+			"answer": "Necesitarás proporcionar tu número de seguidores, likes promedio, compartidos, comentarios y vistas por video para obtener una estimación precisa."
+		},
+		{
+			"question": "¿El calculador se conecta a mi cuenta de TikTok?",
+			"answer": "No, el Calculador de Dinero de TikTok no se conecta directamente a tu cuenta. Requiere que ingreses manualmente tus datos para generar las estimaciones."
+		},
+		{
+			"question": "¿Puede el calculador predecir ingresos futuros?",
+			"answer": "Sí, el calculador puede proyectar ingresos futuros basados en tu tasa de crecimiento actual y métricas de participación, ayudándote a planificar tu estrategia financiera."
+		},
+		{
+			"question": "¿Es gratuito usar el Calculador de Dinero de TikTok?",
+			"answer": "Sí, la mayoría de los Calculadores de Dinero de TikTok son gratuitos y no requieren pago para acceder a las funciones básicas."
+		},
+		{
+			"question": "¿Cómo se calcula la tasa de participación?",
+			"answer": "La tasa de participación se calcula dividiendo el número total de interacciones (likes, comentarios, compartidos) por tu número total de seguidores, y luego multiplicando por 100 para obtener un porcentaje."
+		},
+		{
+			"question": "¿Puedo comparar mis ingresos con otros influencers?",
+			"answer": "Sí, algunos Calculadores de Dinero de TikTok ofrecen herramientas de comparación que te permiten ver cómo se comparan tus ingresos con los de otros influencers con conteos de seguidores y tasas de participación similares."
+		},
+		{
+			"question": "¿El calculador tiene en cuenta diferentes nichos?",
+			"answer": "Algunos calculadores avanzados permiten especificar tu nicho, lo que puede impactar la estimación de ingresos ya que diferentes nichos tienen valores de mercado variados."
+		},
+		{
+			"question": "¿Pueden las marcas usar el calculador para encontrar influencers?",
+			"answer": "Aunque el calculador está diseñado principalmente para influencers, las marcas pueden usarlo para estimar el valor de posibles colaboraciones con creadores de TikTok."
+		},
+		{
+			"question": "¿Con qué frecuencia debo actualizar mis datos en el calculador?",
+			"answer": "Se recomienda actualizar tus datos regularmente, especialmente después de publicar nuevo contenido, para obtener las estimaciones de ingresos más precisas."
+		},
+		{
+			"question": "¿Cuáles son las limitaciones del Calculador de Dinero de TikTok?",
+			"answer": "El calculador proporciona estimaciones basadas en datos disponibles y tendencias de la industria. Sin embargo, no puede tener en cuenta acuerdos únicos, preferencias de marca o cambios repentinos en los algoritmos de la plataforma."
+		}
+	  ],
+	  "Content_List": [
+		{
+		  "title": "¿Qué es la calculadora de dinero de TikTok?",
+		  "name": "La calculadora de dinero de TikTok, también conocida como calculadora de monedas de TikTok, es una herramienta que estima cuántas monedas de TikTok necesitas para comprar regalos virtuales o cuánto valen los regalos que has ganado. Para usarla, ingresa el valor de las monedas o el regalo específico que te interesa. La calculadora convierte estas monedas en su valor equivalente en dólares, ayudándote a comprender el costo o las ganancias potenciales de los regalos virtuales. Esto es útil para los usuarios que desean gestionar sus gastos en la plataforma o para los creadores que buscan estimar sus ingresos de los regalos recibidos."
+		},
+		{
+		  "title": "¿Cómo retirar dinero de la calculadora de TikTok?",
+		  "name": "Retirar dinero de la calculadora de TikTok implica algunos pasos sencillos. Primero, asegúrate de que tu cuenta de TikTok esté vinculada a una cuenta de PayPal o bancaria verificada. Luego, accede al Fondo de Creadores de TikTok o a la sección de ganancias de la calculadora de TikTok dentro de la aplicación. Selecciona la opción 'Retirar', ingresa el monto deseado y confirma los detalles de la transacción. Finalmente, verifica la transacción y tus ganancias se transferirán a tu cuenta vinculada en unos pocos días hábiles. Recuerda verificar si hay tarifas aplicables o montos mínimos de retiro establecidos por TikTok."
+		},
+		{
+		  "title": "¿Cómo usar la calculadora de dinero de TikTok?",
+		  "name": "La calculadora de dinero de TikTok ayuda a los influencers a estimar las ganancias potenciales de su contenido. Para usarla, simplemente ingresa tu nombre de usuario de TikTok o número de seguidores, vistas promedio por video y tasa de participación. La calculadora proporcionará un rango estimado de ganancias basado en el desempeño de tu perfil. Esta herramienta es útil para creadores y marcas para evaluar el valor de las cuentas de TikTok, planificar estrategias de monetización y establecer metas financieras realistas. Ten en cuenta que las ganancias reales pueden variar según factores como el nicho, la ubicación y los datos demográficos de la audiencia."
+		},
+		{
+		  "title": "¿Se puede usar la calculadora de dinero de TikTok en 2024?",
+		  "name": "Sí, la calculadora de dinero de TikTok sigue siendo una herramienta valiosa para los creadores en 2024, permitiéndoles estimar las ganancias potenciales basadas en su número de seguidores, tasa de participación y vistas promedio de video. Ayuda a los influencers y marcas a evaluar el valor financiero de una cuenta de TikTok. Aunque la calculadora proporciona una estimación útil, las ganancias reales pueden variar dependiendo de factores como el nicho, la ubicación de la audiencia y las asociaciones de marca. En 2024, la calculadora sigue siendo relevante para aquellos que buscan monetizar su presencia en TikTok y establecer expectativas financieras realistas."
+		},
+		{
+		  "title": "¿Hay alguna otra calculadora de dinero de TikTok recomendada?",
+		  "name": "La calculadora de dinero de TikTok de Exolyt es una herramienta popular que permite a los influencers de TikTok estimar sus ganancias potenciales en la plataforma. Al ingresar tu nombre de usuario de TikTok o métricas como el número de seguidores, la tasa de participación y las vistas de video, la calculadora proporciona un rango estimado de ganancias. La herramienta de Exolyt es especialmente útil para influencers y marcas para evaluar el valor de las cuentas de TikTok, planificar estrategias de monetización y rastrear el rendimiento. Aunque las estimaciones son perspicaces, las ganancias reales pueden variar según el nicho, los datos demográficos de la audiencia y las oportunidades de asociación."
+		}
+	  ]
 }  
