--- a/locales/ja.json
+++ b/locales/ja.json
@@ -1,4 +1,10 @@
 {
+	"Nav":[
+		{
+			"name":"ブログ",
+			"url":""
+		}
+	],
 	"SEO":{
 		"title": "TikTokマネー計算機——無料でログイン不要",
 		"keywords": "TikTokマネー計算機, TikTok収益計算機, TikTokの収益を計算する, TikTokでお金を稼ぐ方法",
@@ -12,7 +18,84 @@
 	  "des2": "リアルタイムデータ",
 	  "des3": "計算精度"
 	},
+	"Content_List": [
+		{
+		  "title": "TikTok マネーカルキュレーターとは何ですか？",
+		  "name": "TikTok マネーカルキュレーターは、TikTok コインカルキュレーターとも呼ばれ、バーチャルギフトを購入するために必要なTikTokコインの数や、獲得したギフトの価値を推定するツールです。使用するには、コインの価値や興味のある特定のギフトを入力します。計算機はこれらのコインをドル相当の価値に変換し、バーチャルギフトのコストや潜在的な収益を理解するのに役立ちます。これは、プラットフォームでの支出を管理したいユーザーや、受け取ったギフトの収入を見積もりたいクリエイターにとって役立ちます。"
+		},
+		{
+		  "title": "TikTok マネーカルキュレーターからの引き出し方法",
+		  "name": "TikTok マネーカルキュレーターからの引き出しは、いくつかの簡単なステップで行います。まず、TikTok アカウントが確認済みの PayPal や銀行口座にリンクされていることを確認します。次に、アプリ内の TikTok クリエイターファンドや TikTok カルキュレーターの収益セクションにアクセスします。「引き出し」オプションを選択し、希望する金額を入力して引き出しの詳細を確認します。最後に、取引を確認すると、数営業日以内に収益がリンクされた口座に転送されます。TikTok が設定した適用される手数料や最低引き出し金額があるかどうかを確認することを忘れないでください。"
+		},
+		{
+		  "title": "TikTok マネーカルキュレーターの使い方",
+		  "name": "TikTok マネーカルキュレーターは、インフルエンサーがコンテンツから得られる潜在的な収益を見積もるのに役立ちます。使用するには、TikTok ユーザー名またはフォロワー数、動画の平均視聴回数、およびエンゲージメント率を入力します。その後、計算機はプロフィールのパフォーマンスに基づいて推定収益範囲を提供します。このツールは、クリエイターやブランドが TikTok アカウントの価値を評価し、収益化戦略を計画し、現実的な財務目標を設定するのに役立ちます。実際の収益は、ニッチ、場所、オーディエンスの人口統計などの要因によって異なる場合があることに注意してください。"
+		},
+		{
+		  "title": "TikTok マネーカルキュレーターは2024年も使えますか？",
+		  "name": "はい、TikTok マネーカルキュレーターは2024年でもクリエイターにとって貴重なツールであり、フォロワー数、エンゲージメント率、平均動画視聴回数に基づいて潜在的な収益を見積もることができます。これは、インフルエンサーやブランドがTikTokアカウントの財務価値を評価するのに役立ちます。計算機は便利な見積もりを提供しますが、実際の収益はニッチ、オーディエンスの場所、ブランドのパートナーシップなどの要因によって異なる場合があります。2024年には、TikTokでの収益化を目指し、現実的な財務期待を設定する人々にとって、計算機は引き続き有用です。"
+		},
+		{
+		  "title": "他におすすめのTikTokマネーカルキュレーターはありますか？",
+		  "name": "Exolyt TikTok マネーカルキュレーターは、TikTok インフルエンサーがプラットフォームでの潜在的な収益を見積もるのに役立つ人気のツールです。TikTok ユーザー名やフォロワー数、エンゲージメント率、動画視聴回数などの指標を入力すると、計算機は推定収益範囲を提供します。Exolyt のツールは、インフルエンサーやブランドが TikTok アカウントの価値を評価し、収益化戦略を計画し、パフォーマンスを追跡するのに特に役立ちます。見積もりは参考になりますが、実際の収益はニッチ、オーディエンスの人口統計、提携機会によって異なる場合があります。"
+		}
+	],	
 	"Faq": {
 	  "h3": "TikTok収益計算機のFAQ"
-	}
+	},
+	"FAQ_List": [
+		{
+		  "question": "TikTok収益計算機とは何ですか？",
+		  "answer": "TikTok収益計算機は、フォロワー数、エンゲージメント率、コンテンツのパフォーマンスに基づいて、TikTokアカウントから得られるおおよその収益を推定するツールです。"
+		},
+		{
+		  "question": "収益の推定はどれくらい正確ですか？",
+		  "answer": "計算機は業界の平均に基づいて良い推定を提供しますが、実際の収益はブランド契約、ニッチ、コンテンツの質などの要因によって異なる場合があります。"
+		},
+		{
+		  "question": "計算に必要なデータは何ですか？",
+		  "answer": "正確な推定を得るためには、フォロワー数、平均いいね数、シェア数、コメント数、ビデオごとの視聴数を提供する必要があります。"
+		},
+		{
+		  "question": "計算機は私のTikTokアカウントに接続しますか？",
+		  "answer": "いいえ、TikTok収益計算機はアカウントに直接接続しません。データを手動で入力して推定を生成する必要があります。"
+		},
+		{
+		  "question": "計算機は将来の収益を予測できますか？",
+		  "answer": "はい、計算機は現在の成長率とエンゲージメント指標に基づいて将来の収益を予測し、財務戦略を計画するのに役立ちます。"
+		},
+		{
+		  "question": "TikTok収益計算機は無料で使えますか？",
+		  "answer": "はい、多くのTikTok収益計算機は無料で使用でき、基本機能にアクセスするための支払いは不要です。"
+		},
+		{
+		  "question": "エンゲージメント率はどのように計算されますか？",
+		  "answer": "エンゲージメント率は、総インタラクション数（いいね、コメント、シェア）をフォロワー数で割り、100を掛けてパーセンテージを求めることで計算されます。"
+		},
+		{
+		  "question": "他のインフルエンサーと収益を比較できますか？",
+		  "answer": "はい、一部のTikTok収益計算機は比較ツールを提供しており、フォロワー数やエンゲージメント率が似ている他のインフルエンサーと自分の収益を比較できます。"
+		},
+		{
+		  "question": "計算機は異なるニッチに対応していますか？",
+		  "answer": "一部の高度な計算機はニッチを指定することができ、異なるニッチが収益推定に影響を与えることがあります。"
+		},
+		{
+		  "question": "ブランドは計算機を使ってインフルエンサーを見つけることができますか？",
+		  "answer": "計算機は主にインフルエンサー向けですが、ブランドはTikTokクリエイターとのコラボレーションの価値を推定するために利用できます。"
+		},
+		{
+		  "question": "計算機のデータはどれくらいの頻度で更新すべきですか？",
+		  "answer": "特に新しいコンテンツを投稿した後は、データを定期的に更新することが推奨され、最も正確な収益推定が得られます。"
+		},
+		{
+		  "question": "TikTok収益計算機の制限事項は何ですか？",
+		  "answer": "計算機は利用可能なデータと業界の傾向に基づいて推定を提供しますが、特定の契約、ブランドの好み、プラットフォームのアルゴリズムの急な変更には対応できません。"
+		}
+	  ],
+	  "Footer": [
+		{ "name": "About Us", "url": "/about" },
+		{ "name": "Advertising Terms", "url": "/ads" },
+		{ "name": "Privacy Policy", "url": "/privacy" }
+	  ]
 }  
