--- a/locales/ru.json
+++ b/locales/ru.json
@@ -1,4 +1,7 @@
 {
+	"Nav": [
+		{ "name": "Блог", "url": "" }
+	],
 	"SEO":{
 		"title": "Калькулятор доходов TikTok — бесплатно и без регистрации",
 		"keywords": "Калькулятор доходов TikTok, калькулятор заработка TikTok, рассчитать доходы TikTok, как рассчитать деньги на TikTok",
@@ -14,5 +17,82 @@
 	},
 	"Faq": {
 		"h3": "Часто задаваемые вопросы о калькуляторе доходов TikTok"
-	}
+	},
+	"Footer": [
+		{ "name": "About Us", "url": "/about" },
+		{ "name": "Advertising Terms", "url": "/ads" },
+		{ "name": "Privacy Policy", "url": "/privacy" }
+	],
+	"FAQ_List": [
+		{
+		  "question": "Что такое Калькулятор доходов TikTok?",
+		  "answer": "Калькулятор доходов TikTok — это инструмент, который оценивает, сколько денег вы можете заработать на вашем аккаунте TikTok, основываясь на числе подписчиков, уровне вовлеченности и показателях контента."
+		},
+		{
+		  "question": "Насколько точны оценки доходов?",
+		  "answer": "Хотя калькулятор предоставляет хорошую оценку на основе средних показателей по отрасли, фактический доход может варьироваться в зависимости от таких факторов, как сделки с брендами, ниша и качество контента."
+		},
+		{
+		  "question": "Какие данные нужно ввести для расчета?",
+		  "answer": "Вам нужно будет предоставить количество подписчиков, среднее число лайков, репостов, комментариев и просмотров на видео, чтобы получить точную оценку."
+		},
+		{
+		  "question": "Связывается ли калькулятор с моим аккаунтом TikTok?",
+		  "answer": "Нет, Калькулятор доходов TikTok не соединяется напрямую с вашим аккаунтом. Вам нужно вручную ввести свои данные, чтобы получить оценки."
+		},
+		{
+		  "question": "Может ли калькулятор предсказать будущие доходы?",
+		  "answer": "Да, калькулятор может проектировать будущие доходы на основе вашего текущего темпа роста и показателей вовлеченности, помогая вам планировать финансовую стратегию."
+		},
+		{
+		  "question": "Калькулятор доходов TikTok бесплатен в использовании?",
+		  "answer": "Да, большинство Калькуляторов доходов TikTok бесплатны и не требуют оплаты для доступа к базовым функциям."
+		},
+		{
+		  "question": "Как рассчитывается уровень вовлеченности?",
+		  "answer": "Уровень вовлеченности рассчитывается путем деления общего числа взаимодействий (лайков, комментариев, репостов) на общее количество подписчиков, а затем умножения на 100 для получения процента."
+		},
+		{
+		  "question": "Могу ли я сравнить свои доходы с доходами других инфлюенсеров?",
+		  "answer": "Да, некоторые Калькуляторы доходов TikTok предлагают инструменты для сравнения, которые позволяют увидеть, как ваши доходы соотносятся с доходами других инфлюенсеров с похожим числом подписчиков и уровнем вовлеченности."
+		},
+		{
+		  "question": "Учитывает ли калькулятор различные ниши?",
+		  "answer": "Некоторые продвинутые калькуляторы позволяют указать вашу нишу, что может повлиять на оценку доходов, так как различные ниши имеют разную рыночную ценность."
+		},
+		{
+		  "question": "Могут ли бренды использовать калькулятор для поиска инфлюенсеров?",
+		  "answer": "Хотя калькулятор в основном предназначен для инфлюенсеров, бренды могут использовать его для оценки стоимости потенциальных сотрудничеств с создателями контента на TikTok."
+		},
+		{
+		  "question": "Как часто следует обновлять данные в калькуляторе?",
+		  "answer": "Рекомендуется регулярно обновлять данные, особенно после публикации нового контента, чтобы получить наиболее точные оценки доходов."
+		},
+		{
+		  "question": "Какие ограничения у Калькулятора доходов TikTok?",
+		  "answer": "Калькулятор предоставляет оценки на основе доступных данных и тенденций в отрасли. Однако он не может учитывать уникальные сделки, предпочтения брендов или внезапные изменения в алгоритмах платформы."
+		}
+	],
+	"Content_List": [
+		{
+		  "title": "Что такое калькулятор денег TikTok?",
+		  "name": "Калькулятор денег TikTok, также называемый калькулятором монет TikTok, — это инструмент, который оценивает, сколько монет TikTok вам нужно для покупки виртуальных подарков или сколько стоят ваши заработанные подарки. Для его использования введите значение монет или конкретный подарок, который вас интересует. Калькулятор преобразует эти монеты в их эквивалентную стоимость в долларах, помогая вам понять стоимость или потенциальный доход от виртуальных подарков. Это полезно для пользователей, которые хотят управлять своими расходами на платформе, или для создателей контента, стремящихся оценить свой доход от полученных подарков."
+		},
+		{
+		  "title": "Как снять деньги с калькулятора TikTok?",
+		  "name": "Снятие денег с калькулятора TikTok включает несколько простых шагов. Во-первых, убедитесь, что ваш аккаунт TikTok привязан к проверенному аккаунту PayPal или банковскому счёту. Затем перейдите в фонд создателей TikTok или раздел доходов калькулятора TikTok в приложении. Выберите опцию 'Снять', введите желаемую сумму и подтвердите детали снятия. Наконец, подтвердите транзакцию, и ваши доходы будут переведены на ваш связанный счёт в течение нескольких рабочих дней. Не забудьте проверить наличие любых применимых сборов или минимальных сумм для снятия, установленных TikTok."
+		},
+		{
+		  "title": "Как использовать калькулятор денег TikTok?",
+		  "name": "Калькулятор денег TikTok помогает инфлюенсерам оценить потенциальный доход от их контента. Чтобы использовать его, просто введите ваше имя пользователя TikTok или количество подписчиков, среднее количество просмотров на видео и уровень вовлечённости. Калькулятор предоставит оценочный диапазон доходов на основе производительности вашего профиля. Этот инструмент полезен для создателей контента и брендов для оценки стоимости аккаунтов TikTok, планирования стратегий монетизации и установки реалистичных финансовых целей. Обратите внимание, что фактический доход может варьироваться в зависимости от таких факторов, как ниша, местоположение и демографические данные аудитории."
+		},
+		{
+		  "title": "Можно ли использовать калькулятор денег TikTok в 2024 году?",
+		  "name": "Да, калькулятор денег TikTok остаётся ценным инструментом для создателей контента в 2024 году, позволяя им оценивать потенциальный доход на основе количества подписчиков, уровня вовлечённости и среднего числа просмотров видео. Он помогает инфлюенсерам и брендам оценить финансовую ценность аккаунта TikTok. Хотя калькулятор предоставляет полезную оценку, фактический доход может варьироваться в зависимости от таких факторов, как ниша, местоположение аудитории и партнёрские соглашения. В 2024 году калькулятор продолжает быть актуальным для тех, кто хочет монетизировать своё присутствие на TikTok и установить реалистичные финансовые ожидания."
+		},
+		{
+		  "title": "Какие ещё калькуляторы денег TikTok можно порекомендовать?",
+		  "name": "Калькулятор денег TikTok от Exolyt — это популярный инструмент, который позволяет инфлюенсерам TikTok оценить их потенциальный доход от платформы. Вводя ваше имя пользователя TikTok или метрики, такие как количество подписчиков, уровень вовлечённости и просмотры видео, калькулятор предоставляет оценочный диапазон доходов. Инструмент Exolyt особенно полезен для инфлюенсеров и брендов, чтобы оценить стоимость аккаунтов TikTok, спланировать стратегии монетизации и отслеживать результаты. Хотя оценки полезны, фактический доход может варьироваться в зависимости от ниши, демографических данных аудитории и возможностей партнёрства."
+		}
+	]
 }
