--- a/locales/zh.json
+++ b/locales/zh.json
@@ -1,4 +1,10 @@
 {
+	"Nav":[
+		{
+			"name":"博客",
+			"url":""
+		}
+	],
 	"SEO":{
 		"title": "TikTok收入计算器——免费且无需登录",
 		"keywords": "TikTok收入计算器, TikTok收益计算器, 计算TikTok收入, 如何计算TikTok上的收入",
@@ -12,8 +18,85 @@
 	  "des2": "实时数据",
 	  "des3": "计算精度"
 	},
+	"Content_List": [
+		  {
+			"title": "TikTok 金钱计算器是什么意思?",
+			"name": "TikTok 金钱计算器也被称为 TikTok 硬币计算器，它是一个工具，用于估算您需要购买虚拟礼物的 TikTok 硬币数量或您获得的礼物的价值。要使用它，只需输入硬币的数量或您感兴趣的特定礼物。计算器将这些硬币转换为等值的美元，帮助您了解虚拟礼物的成本或潜在收益。这对希望管理平台支出的用户或希望估算收到礼物收入的创作者非常有用。"
+		  },
+		  {
+			"title": "如何提现 TikTok 金钱计算器的收益?",
+			"name": "从 TikTok 计算器中提现涉及几个简单的步骤。首先，确保您的 TikTok 账户已链接到已验证的 PayPal 或银行账户。接下来，访问应用中的 TikTok 创作者基金或 TikTok 计算器收益部分。选择 '提现' 选项，输入所需金额，并确认提现详情。最后，验证交易，您的收益将在几个工作日内转入您链接的账户。请记得检查 TikTok 设置的任何适用费用或最低提现金额。"
+		  },
+		  {
+			"title": "如何使用 TikTok 金钱计算器?",
+			"name": "TikTok 金钱计算器帮助影响者估算其内容的潜在收益。要使用它，只需输入您的 TikTok 用户名或粉丝数量、每个视频的平均观看次数和互动率。然后，计算器将根据您的账号表现提供一个预估的收益范围。该工具对于创作者和品牌评估 TikTok 账号的价值、制定货币化策略和设定现实的财务目标非常有用。请注意，实际收益可能会根据领域、位置和受众人口统计等因素有所不同。"
+		  },
+		  {
+			"title": "2024年 TikTok 金钱计算器还能用吗?",
+			"name": "是的，TikTok 金钱计算器在 2024 年仍然是创作者的宝贵工具，它允许他们根据粉丝数量、互动率和视频平均观看次数来估算潜在收益。它帮助影响者和品牌评估 TikTok 账号的财务价值。虽然计算器提供了有用的估算，但实际收益可能会因领域、受众位置和品牌合作关系等因素而有所不同。在 2024 年，这个计算器对于那些希望通过 TikTok 进行货币化并设定现实财务期望的人来说仍然很有意义。"
+		  },
+		  {
+			"title": "还有其他 TikTok 金钱计算器推荐吗?",
+			"name": "Exolyt TikTok 金钱计算器是一个受欢迎的工具，它允许 TikTok 影响者估算他们在平台上的潜在收益。通过输入您的 TikTok 用户名或粉丝数量、互动率和视频观看次数等指标，计算器会提供一个预估的收益范围。Exolyt 的工具对于影响者和品牌评估 TikTok 账号的价值、制定货币化策略和跟踪表现尤其有用。尽管估算结果很有参考价值，但实际收益可能会因领域、受众人口统计和合作机会而有所不同。"
+		  }
+	],
 	"Faq": {
 	  "h3": "TikTok收益计算器常见问题"
-	}
+	},
+	"FAQ_List": [
+		  {
+			"question": "TikTok 收入计算器是什么？",
+			"answer": "TikTok 收入计算器是一个工具，帮助你根据 TikTok 账号的粉丝数量、互动率和内容表现来估算潜在的收入。"
+		  },
+		  {
+			"question": "收入估算的准确性如何？",
+			"answer": "虽然计算器基于行业平均值提供了一个良好的估算，但实际收入可能因品牌合作、细分市场和内容质量等因素而有所不同。"
+		  },
+		  {
+			"question": "我需要输入哪些数据来进行计算？",
+			"answer": "你需要提供粉丝数量、每个视频的平均点赞数、分享数、评论数和观看数，以获得准确的估算结果。"
+		  },
+		  {
+			"question": "计算器会连接到我的 TikTok 账号吗？",
+			"answer": "不会，TikTok 收入计算器不会直接连接到你的账号。它需要你手动输入数据来生成估算结果。"
+		  },
+		  {
+			"question": "计算器可以预测未来的收入吗？",
+			"answer": "可以，计算器可以根据你当前的增长率和互动指标预测未来的收入，帮助你规划财务策略。"
+		  },
+		  {
+			"question": "TikTok 收入计算器是否免费使用？",
+			"answer": "是的，大多数 TikTok 收入计算器是免费使用的，并且不需要支付费用来访问基本功能。"
+		  },
+		  {
+			"question": "互动率是如何计算的？",
+			"answer": "互动率通过将总互动数（点赞、评论、分享）除以总粉丝数，然后乘以 100 得到百分比来计算。"
+		  },
+		  {
+			"question": "我可以将我的收入与其他影响者进行比较吗？",
+			"answer": "可以，一些 TikTok 收入计算器提供了比较工具，让你可以查看自己的收入与其他粉丝数量和互动率相似的影响者的比较情况。"
+		  },
+		  {
+			"question": "计算器会考虑不同的细分市场吗？",
+			"answer": "一些高级计算器允许你指定细分市场，这会影响收入估算，因为不同的细分市场具有不同的市场价值。"
+		  },
+		  {
+			"question": "品牌可以使用计算器来寻找影响者吗？",
+			"answer": "虽然计算器主要是为影响者设计的，但品牌可以使用它来估算与 TikTok 创作者潜在合作的价值。"
+		  },
+		  {
+			"question": "我应该多久更新一次计算器中的数据？",
+			"answer": "建议你定期更新数据，尤其是在发布新内容后，以获得最准确的收入估算结果。"
+		  },
+		  {
+			"question": "TikTok 收入计算器有哪些限制？",
+			"answer": "计算器基于可用数据和行业趋势提供估算。但它无法考虑独特的交易、品牌偏好或平台算法的突然变化。"
+		  }
+	  ],
+	  "Footer": [
+		{ "name": "关于我们", "url": "/about" },
+		{ "name": "广告条款", "url": "/ads" },
+		{ "name": "隐私政策", "url": "/privacy" }
+	  ]
   }
   
